tests/ui/auto-traits/has-arguments.stderr
error[E0567]: auto traits cannot have generic parameters
  --> $DIR/has-arguments.rs:3:18
   |
LL | auto trait Trait1<'outer> {}
   |            ------^^^^^^^^
   |            |
   |            auto trait cannot have generic parameters

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0567`.
